<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">remotecontrol</string>
    <string name="main_btn_volume_up">Volume Up↑</string>
    <string name="main_btn_volume_down">Volume Down↓</string>
    <string name="main_btn_volume_mute">Mute/Unmute</string>
    <string name="main_btn_shutdown">SHUTDOWN</string>
    <string name="main_btn_enter_text">Enter→</string>
    <string name="main_btn_send_text">Send</string>
    <string name="main_btn_send_key_esc">Esc</string>
    <string name="main_btn_send_key_backspace">Backspace</string>
    <string name="main_btn_send_key_enter">Enter</string>
    <string name="main_btn_send_key_magnify">Magnify(+)</string>
    <string name="main_btn_send_key_original">Original Size</string>
    <string name="main_btn_send_key_minify">Minify(-)</string>
    <string name="main_btn_send_key_up">↑</string>
    <string name="main_btn_send_key_down">↓</string>
    <string name="main_btn_send_key_left">←</string>
    <string name="main_btn_send_key_right">→</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_exit">Exit</string>
    
    <string name="about_activity_title">About remotecontrol</string>
    <string name="about_author">Author: Johnson Lau</string>
    <string name="about_email">Email: gatement@gmail.com</string>
    <string name="about_back">Back</string>
    
    <string name="settings_activity_title">Settings</string>    
    <string name="settings_server">Server</string>
    <string name="settings_server1_ip">Server1 IP</string>
    <string name="settings_server2_ip">Server2 IP</string>
    <string name="settings_server3_ip">Server3 IP</string>
    <string name="settings_server_port">Server Port</string>
    <string name="settings_password">Password</string>
    <string name="settings_pointer_speed">Pointer Speed</string>
    <string name="settings_wheel_speed">Wheel Speed</string>
    <string name="settings_response_precision">Response Precision</string>
    <string name="settings_key_interval">Key Press Interval</string>
    <string name="settings_ping_interval">Ping Interval</string>
    <string name="settings_tap_to_click">Enable Tap-To-Click</string>
    <string name="settings_save">Save</string>

</resources>