<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_tab_key_board"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/main_enter_text"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:textSize="25dp" />

        <Button
            android:id="@+id/main_btn_send_text"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_selector1"
            android:text="@string/main_btn_send_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/main_btn_send_key_esc"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector5"
            android:text="@string/main_btn_send_key_esc" />

        <Button
            android:id="@+id/main_btn_send_key_backspace"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector5"
            android:text="@string/main_btn_send_key_backspace" />

        <Button
            android:id="@+id/main_btn_send_key_enter"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector5"
            android:text="@string/main_btn_send_key_enter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/main_btn_send_key_minify"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector3"
            android:text="@string/main_btn_send_key_minify" />

        <Button
            android:id="@+id/main_btn_send_key_original"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector3"
            android:text="@string/main_btn_send_key_original" />

        <Button
            android:id="@+id/main_btn_send_key_magnify"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
        android:background="@drawable/button_selector3"
            android:text="@string/main_btn_send_key_magnify" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/main_btn_send_key_up"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/button_selector1"
            android:text="@string/main_btn_send_key_up" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/main_btn_send_key_left"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector1"
            android:text="@string/main_btn_send_key_left" />

        <Button
            android:id="@+id/main_btn_send_key_down"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector1"
            android:text="@string/main_btn_send_key_down" />

        <Button
            android:id="@+id/main_btn_send_key_right"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector1"
            android:text="@string/main_btn_send_key_right" />
    </LinearLayout>

    <Button
        android:id="@+id/main_btn_send_key_space"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_selector5"/>

</LinearLayout>