<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/settings_save"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:background="@drawable/button_selector2"
        android:text="@string/settings_save" />

    <TextView
        android:id="@+id/settings_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:paddingLeft="10dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_server" />

                <Spinner
                    android:id="@+id/settings_server"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_server1_ip" />

                <EditText
                    android:id="@+id/settings_server1_ip"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_server2_ip" />

                <EditText
                    android:id="@+id/settings_server2_ip"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_server3_ip" />

                <EditText
                    android:id="@+id/settings_server3_ip"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_server_port" />

                <EditText
                    android:id="@+id/settings_server_port"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_password" />

                <EditText
                    android:id="@+id/settings_password"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_pointer_speed" />

                <EditText
                    android:id="@+id/settings_pointer_speed"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_wheel_speed" />

                <EditText
                    android:id="@+id/settings_wheel_speed"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_response_precision" />

                <EditText
                    android:id="@+id/settings_response_precision"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_key_interval" />

                <EditText
                    android:id="@+id/settings_key_interval"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_ping_interval" />

                <EditText
                    android:id="@+id/settings_ping_interval"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/settings_tap_to_click"
                android:layout_width="fill_parent"
                android:layout_height="58dp"
                android:text="@string/settings_tap_to_click" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>